--- a/DiChoHo/templates/index.html
+++ b/DiChoHo/templates/index.html
@@ -390,6 +390,7 @@
 				prodid = prodid.replace("productAdd4", "");
 				prodid = prodid.replace("productAdd5", "");
 				prodid = prodid.replace("productAdd6", "");
+				var count = document.getElementById("cart_qty").innerHTML;
 				$.ajax({
 					type: 'POST',
 					url: '{% url "cart_add" %}',
@@ -400,6 +401,8 @@
 						action: 'post'
 					},
 					success: function (json) {
+						count++;
+						document.getElementById("cart_qty").innerHTML = count;
 						$("#success-alert").show();
 						$("#success-alert").fadeTo(2000, 500).slideUp(500, function(){
 						$("#success-alert").slideUp(500);
