--- a/DiChoHo/templates/profile.html
+++ b/DiChoHo/templates/profile.html
@@ -259,7 +259,7 @@
                   <div class="row g-0">
                     <div class=" col-md-10">
                       <div class="card-body p-3">
-                        <a class="text-decoration-none" href="{{ item.product.get_absolute_url }}">
+                        <a class="text-decoration-none" id="{{ item.product.id }}" href="{{ item.product.get_absolute_url }}">
                           <p class="card-text medium">{{item.product.title}}</p>
                         </a>
                         <button class="btn btn-primary" type="button" data-toggle="modal" data-target="#guidanhgia"> Để
