add_html_send_mail

--- a/DiChoHo/templates/about.html
+++ b/DiChoHo/templates/about.html
@@ -11,8 +11,8 @@
   <div class="container">
     <div class="row no-gutters slider-text align-items-center justify-content-center">
       <div class="col-md-9 ftco-animate text-center">
-        <p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home</a></span> <span>About us</span></p>
-        <h1 class="mb-0 bread">About us</h1>
+        <p class="breadcrumbs"><span class="mr-2"></span></p>
+        <h1 class="mb-0 bread">Về chúng tôi</h1>
       </div>
     </div>
   </div>
@@ -36,7 +36,7 @@
         <div class="pb-md-5">
           <p>Chúng tôi hỗ trợ bạn các dịch vụ về mua hàng trực tuyến với chất lượng và giá trị tốt nhất trên Website của
             chúng tôi</p>
-          <p><a href="#" class="btn btn-primary" style="background-color: #02be6e;">Shop now</a></p>
+          <p><a href="{% url 'shop' %}" class="btn btn-primary" style="background-color: #02be6e;">Shop</a></p>
         </div>
       </div>
     </div>
