--- a/DiChoHo/templates/profile.html
+++ b/DiChoHo/templates/profile.html
@@ -193,7 +193,7 @@
 
 
         <div class="tab-pane" id="security">
-          <div class="form-group" style="font-size:25px">Đổi mật khẩu</div>
+          <div class="form-group" style= "font-size:25px;" >Đổi mật khẩu</div>
           <h6>Để bảo mật tài khoản vui lòng không chia sẻ mật khẩu cho người khác</h6>
           <hr>
           <div class="block_change_password" style="display:block;margin-top:0em;">
