--- a/DiChoHo/templates/about.html
+++ b/DiChoHo/templates/about.html
@@ -21,8 +21,8 @@
 <section class="ftco-section ftco-no-pb ftco-no-pt bg-light">
   <div class="container">
     <div class="row">
-      <div class="col-md-5 p-md-5 img img-2 d-flex justify-content-center align-items-center"
-        style="background-image: url(images/about.jpg);">
+      <div class="col-md-5 p-md-5 img img-2 d-flex justify-content-center align-items-center mt-5"
+        style="background-image:  url('/static/images/about.jpg'); width: 450px; height:450px;">
         <a href="https://vimeo.com/45830194" class="icon popup-vimeo d-flex justify-content-center align-items-center">
           <span class="icon-play"></span>
         </a>
