--- a/DiChoHo/templates/checkout/payment_selection.html
+++ b/DiChoHo/templates/checkout/payment_selection.html
@@ -3,12 +3,30 @@
 {% block title %}Payment Selection{%endblock %}
 {% block content %}
 
+<div
+  class="hero-wrap hero-bread"
+  style="background-image: url('/static/images/bg_1.jpg')"
+>
+  <div class="container">
+    <div
+      class="
+        row
+        no-gutters
+        slider-text
+        align-items-center
+        justify-content-center
+      "
+    >
+      <div class="col-md-9 ftco-animate text-center">
+        <h1 class="mb-0 bread">Thanh toán Paypal</h1>
+      </div>
+    </div>
+  </div>
+</div>
+
 <div class="container">
     <div class="col-12">
-        <h1 class="h2">Delivery Options</h1>
-    </div>
-    <div class="col-12">
-        <p>Please select your delivery option</p>
+        <p>Vui lòng thanh toán bằng Paypal phía dưới</p>
     </div>
     <hr />
 </div>
