--- a/DiChoHo/templates/edit_profile.html
+++ b/DiChoHo/templates/edit_profile.html
@@ -4,6 +4,27 @@
 
 {% block content %}
 
+<div
+  class="hero-wrap hero-bread"
+  style="background-image: url('/static/images/bg_1.jpg')"
+>
+  <div class="container">
+    <div
+      class="
+        row
+        no-gutters
+        slider-text
+        align-items-center
+        justify-content-center
+      "
+    >
+      <div class="col-md-9 ftco-animate text-center">
+        <h1 class="mb-0 bread">Chỉnh sửa thông tin cá nhân</h1>
+      </div>
+    </div>
+  </div>
+</div>
+
 <div class="col-6 mx-auto">
     <form class="account-form" method="post" enctype="multipart/form-data">
         {% if user_form.is_valid and profile_form.is_valid  %}
