--- a/DiChoHo/templates/product-single.html
+++ b/DiChoHo/templates/product-single.html
@@ -35,12 +35,17 @@
 				<h3>{{product.title}}</h3>
 				<div class="rating d-flex">
 					<p class="text-left mr-4">
-						<a href="#" class="mr-2">5.0</a>
+						<a href="#" class="mr-2">{{stars}}</a>
+						{% for star in stars_int%}
+						<a href="#"><span class="ion-ios-star"></span></a>
+						{% comment %} <a href="#"><span class="ion-ios-star-outline"></span></a>
 						<a href="#"><span class="ion-ios-star-outline"></span></a>
 						<a href="#"><span class="ion-ios-star-outline"></span></a>
+						<a href="#"><span class="ion-ios-star-outline"></span></a> {% endcomment %}
+						{% endfor %}
+						{% for star in unstars_int%}
 						<a href="#"><span class="ion-ios-star-outline"></span></a>
-						<a href="#"><span class="ion-ios-star-outline"></span></a>
-						<a href="#"><span class="ion-ios-star-outline"></span></a>
+						{% endfor %}
 					</p>
 					<p class="text-left mr-4">
 						<a href="#" class="mr-2" style="color: #000;">{{rating_count}} <span style="color: #bbb;">Đánh giá</span></a>
