--- a/DiChoHo/templates/profile.html
+++ b/DiChoHo/templates/profile.html
@@ -8,6 +8,26 @@
 {% endblock %}
 {% block content %}
 
+<div
+  class="hero-wrap hero-bread"
+  style="background-image: url('/static/images/bg_1.jpg')"
+>
+  <div class="container">
+    <div
+      class="
+        row
+        no-gutters
+        slider-text
+        align-items-center
+        justify-content-center
+      "
+    >
+      <div class="col-md-9 ftco-animate text-center">
+        <h1 class="mb-0 bread">Thông tin người dùng</h1>
+      </div>
+    </div>
+  </div>
+</div>
 <div class="row gutters-sm mt-5">
   <div class="col-md-4 d-none d-md-block">
     <div class="card">
@@ -230,8 +250,8 @@
                 <b style="right:0">Hiện</b>
               </div> {% endcomment %}
               <div class="btn_finish" style="padding-top:20px;">
-                <button type="submit" class="btn-solve"
-                  style="color:white;background-color:#02BE6E;box-sizing: border-box;width:280px;padding:8px 2px 8px;font-size:20px">Lưu</button>
+                <button type="submit" class="btn btn-primary py-3 px-4" role="button"
+                  style="width:30%; font-size:20px">Lưu</button>
               </div>
 
             </form>
@@ -255,6 +275,7 @@
               <div class="col-md-7 col-lg-12 p-0">
 
                 {% for item in order.items.all %}
+                {% for rating in ratings %}
                 <div class="card mb-3">
                   <div class="row g-0">
                     <div class=" col-md-10">
@@ -262,12 +283,18 @@
                         <a class="text-decoration-none" id="{{ item.product.id }}" href="{{ item.product.get_absolute_url }}">
                           <p class="card-text medium">{{item.product.title}}</p>
                         </a>
-                        <button class="btn btn-primary jQueryEvaluate" id="evaluate{{item.product.id}}" type="button" data-toggle="modal" data-target="#guidanhgia"> Để
-                          lại đánh giá</button>
+                        {% if rating.product.id == item.product.id %}
+                        <button class="btn btn-primary jQueryEvaluate" style="width:20%" id="evaluate{{item.product.id}}" type="button" data-toggle="modal" data-target="#guidanhgia" disabled>
+                        Bạn đã đánh giá</button>
+                        {% else %}
+                        <button class="btn btn-primary jQueryEvaluate" style="width:20%" id="evaluate{{item.product.id}}" type="button" data-toggle="modal" data-target="#guidanhgia">
+                        Để lại đánh giá</button>
+                        {% endif %}
                       </div>
                     </div>
                   </div>
                 </div>
+                {% endfor %}
                 {% endfor %}
               </div>
             </div>
