--- a/DiChoHo/templates/checkout/delivery.html
+++ b/DiChoHo/templates/checkout/delivery.html
@@ -46,7 +46,7 @@
 						{% for option in deliveryoptions %}
 						<div class="card mb-3 border-1 rounded-0 product-item me-md-4" data-index="{{option.id}}">
 							<div class="row g-0">
-								<div class="col-md-2 ps-3 ps-md-4">
+								<div class="col-md-2 ps-3 ps-md-4 " style="padding:15px 0 0 50px">
 									<svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor"
 										class="bi bi-truck mt-2" viewBox="0 0 16 16">
 										<path
