--- a/DiChoHo/templates/edit_address.html
+++ b/DiChoHo/templates/edit_address.html
@@ -23,7 +23,7 @@
   </div>
 </div>
 
-<div class="col-6 mx-auto">
+<div class="col-6 mx-auto mt-5">
   {% comment %} <h1 class="h3">Create/Edit Address</h1>
   <div>Add a new delivery <b>address</b> and delivery preferences</div>
   <hr /> {% endcomment %}
