--- a/DiChoHo/templates/profile.html
+++ b/DiChoHo/templates/profile.html
@@ -275,7 +275,6 @@
               <div class="col-md-7 col-lg-12 p-0">
 
                 {% for item in order.items.all %}
-                {% for rating in ratings %}
                 <div class="card mb-3">
                   <div class="row g-0">
                     <div class=" col-md-10">
@@ -283,18 +282,12 @@
                         <a class="text-decoration-none" id="{{ item.product.id }}" href="{{ item.product.get_absolute_url }}">
                           <p class="card-text medium">{{item.product.title}}</p>
                         </a>
-                        {% if rating.product.id == item.product.id %}
-                        <button class="btn btn-primary jQueryEvaluate" style="width:20%" id="evaluate{{item.product.id}}" type="button" data-toggle="modal" data-target="#guidanhgia" disabled>
-                        Bạn đã đánh giá</button>
-                        {% else %}
                         <button class="btn btn-primary jQueryEvaluate" style="width:20%" id="evaluate{{item.product.id}}" type="button" data-toggle="modal" data-target="#guidanhgia">
                         Để lại đánh giá</button>
-                        {% endif %}
                       </div>
                     </div>
                   </div>
                 </div>
-                {% endfor %}
                 {% endfor %}
               </div>
             </div>
@@ -325,7 +318,13 @@
 
                 <div class="md-form">
                   <label data-error="wrong" data-success="right" for="form2">Số sao cho sản phẩm</label>
-                  <input type="number" id="form2" class="form-control validate" min="1" max="5">
+                  <select class="form-control validate" id="form2">
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5</option>
+                  </select>
                 </div>
               </div>
 
