--- a/DiChoHo/templates/checkout/payment_selection.html
+++ b/DiChoHo/templates/checkout/payment_selection.html
@@ -24,7 +24,7 @@
   </div>
 </div>
 
-<div class="container">
+<div class="container mt-5">
     <div class="col-12">
         <p>Vui lòng thanh toán bằng Paypal phía dưới</p>
     </div>
