--- a/DiChoHo/templates/checkout/payment_successful.html
+++ b/DiChoHo/templates/checkout/payment_successful.html
@@ -24,7 +24,7 @@
   </div>
 </div>
 
-<div class="container">
+<div class="container  mt-5">
   <div class="col-12">
     <h1 class="h2">Thanh toán thành công</h1>
   </div>
