--- a/DiChoHo/templates/edit_profile.html
+++ b/DiChoHo/templates/edit_profile.html
@@ -8,7 +8,7 @@
   class="hero-wrap hero-bread"
   style="background-image: url('/static/images/bg_1.jpg')"
 >
-  <div class="container">
+  <div class="container mt-5">
     <div
       class="
         row
