--- a/DiChoHo/templates/checkout/delivery.html
+++ b/DiChoHo/templates/checkout/delivery.html
@@ -176,11 +176,11 @@
 							</div>
 						</div>
 					</div>
-				</div> <!-- .col-md-8 -->
+				</div> 
 			</div>
 		</div>
 	</div>
-</section> <!-- .section -->
+</section> 
 
 
 <script>
