--- a/DiChoHo/templates/edit_address.html
+++ b/DiChoHo/templates/edit_address.html
@@ -52,9 +52,9 @@
 <script> 
 function submitForm() {
    var form = document.getElementsByName('address_form')[0];
-   form.submit(); // Submit the form
-   form.reset();  // Reset all form data
-   return false; // Prevent page refresh
+   form.submit();
+   form.reset();  
+   return false; 
 }
 </script>
 {% endblock %}
