--- a/DiChoHo/templates/checkout/payment_paypal.html
+++ b/DiChoHo/templates/checkout/payment_paypal.html
@@ -113,7 +113,7 @@
                         orderID: data.orderID
                     })
                 }).then(function () {
-                    location.href = '{% url 'checkout:payment_successful' %}';
+                    location.href = "{% url 'checkout:payment_successful' %}";
                 })
             },
         }).render('#paypal-button-container');
