--- a/DiChoHo/templates/product-single.html
+++ b/DiChoHo/templates/product-single.html
@@ -27,7 +27,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-6 mb-5 ftco-animate">
-				<a href="{% static 'images/product-1.jpg' %}" class="image-popup"><img
+				<a href="{{ product.image.url | slice:"10:" }}" class="image-popup"><img
 						src="{{ product.image.url | slice:"10:" }}" class="img-fluid" alt="San-pham"></a>
 			</div>
 			<div class="col-lg-6 product-details pl-md-5 ftco-animate">
