--- a/DiChoHo/templates/index.html
+++ b/DiChoHo/templates/index.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 {% load static %}
-<div class="row">
+<div class="row mx-0">
 	<div class="col-lg-12 card-margin">
 		<div class="card search-form">
 			<div class="card-body p-0">
