--- a/DiChoHo/templates/base.html
+++ b/DiChoHo/templates/base.html
@@ -25,9 +25,7 @@
 
 	<link rel="stylesheet" href="{% static 'css/bootstrap-datepicker.css' %}">
 	<link rel="stylesheet" href="{% static 'css/jquery.timepicker.css' %}">
-	<link rel="stylesheet" href="{% static 'css/404style.css' %}">
 	
-
 
 	<link rel="stylesheet" href="{% static 'css/flaticon.css' %}">
 	<link rel="stylesheet" href="{% static 'css/icomoon.css' %}">
@@ -143,7 +141,7 @@
 								<li><a href="#"><span class="icon icon-phone"></span><span class="text">+84 123 456
 											789</span></a></li>
 								<li><a href="#"><span class="icon icon-envelope"></span><span
-											class="text">cskh@dichoho.com</span></a></li>
+											class="text">dichohodjango@gmail.com</span></a></li>
 							</ul>
 						</div>
 					</div>
