--- a/DiChoHo/templates/cart.html
+++ b/DiChoHo/templates/cart.html
@@ -29,6 +29,8 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12 ftco-animate">
+        <h5>Vì tình hình dịch bệnh hạn chế giao hàng nhiều lần nên chúng tôi chỉ nhận đơn hàng trên 200.000 VNĐ. 
+          Xin quý khách thông cảm.</h5>
         <div class="cart-list">
           <table class="table" id="jqueryCatchClick">
             <thead class="thead-primary">
