--- a/DiChoHo/templates/cart.html
+++ b/DiChoHo/templates/cart.html
@@ -6,7 +6,7 @@
 
 <div
   class="hero-wrap hero-bread"
-  style="background-image: url('/static/images/bg_1.jpg')"
+  style="background-image: url('/static/images/bg_4.jpg')"
 >
   <div class="container">
     <div
@@ -29,7 +29,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12 ftco-animate">
-        <h5>Vì tình hình dịch bệnh hạn chế giao hàng nhiều lần nên chúng tôi chỉ nhận đơn hàng trên 200.000 VNĐ. 
+        <h5>Vì tình hình dịch bệnh nên chúng tôi chỉ nhận đơn hàng trên 200.000 VNĐ, hạn chế giao hàng nhiều lần . 
           Xin quý khách thông cảm.</h5>
         <div class="cart-list">
           <table class="table" id="jqueryCatchClick">
