--- a/DiChoHo/templates/index.html
+++ b/DiChoHo/templates/index.html
@@ -48,7 +48,7 @@
 					<div class="col-md-12 ftco-animate text-center">
 						<h1 class="mb-2">Giải pháp mua hàng hóa mùa dịch</h1>
 						<h2 class="subheading mb-4">Supply neccessary products in the COVID-19 pandemic</h2>
-						<p><a href="#" class="btn btn-primary">Xem chi tiết</a></p>
+						<p><a href="{% url 'shop' %}" class="btn btn-primary">Xem chi tiết</a></p>
 					</div>
 
 				</div>
@@ -63,7 +63,7 @@
 					<div class="col-sm-12 ftco-animate text-center">
 						<h1 class="mb-2">Thực phẩm tươi &amp; Sản phẩm tốt</h1>
 						<h2 class="subheading mb-4">We deliver organic vegetables &amp; fruits</h2>
-						<p><a href="#" class="btn btn-primary">Xem chi tiết</a></p>
+						<p><a href="{% url 'shop' %}" class="btn btn-primary">Xem chi tiết</a></p>
 					</div>
 
 				</div>
@@ -159,7 +159,7 @@
 				<div class="category-wrap ftco-animate img mb-4 d-flex align-items-end"
 					style="background-image: url(/static/images/category_3.jpg);">
 					<div class="text px-3 py-1">
-						<h2 class="mb-0"><a href="/shop/do-uong/">Nước ép</a></h2>
+						<h2 class="mb-0"><a href="/shop/do-uong/">Đồ uống</a></h2>
 					</div>
 				</div>
 				<div class="category-wrap ftco-animate img d-flex align-items-end"
