--- a/DiChoHo/templates/static/css/style.css
+++ b/DiChoHo/templates/static/css/style.css
@@ -8003,7 +8003,7 @@ a.text-dark:hover, a.text-dark:focus {
     border-color: #dee2e6; } }
 
 body {
-  font-family: "Poppins", Arial, sans-serif;
+  font-family: "Merriweather", Arial, sans-serif;
   background: #fff;
   font-size: 15px;
   line-height: 1.8;
@@ -8029,7 +8029,7 @@ h1, h2, h3, h4, h5,
   line-height: 1.5;
   font-weight: 400;
   color: #334443;
-  font-family: "Poppins", Arial, sans-serif; }
+  font-family: "Merriweather", Arial, sans-serif; }
 
 .text-primary {
   color: #02be6e !important; }
@@ -8246,8 +8246,8 @@ h1, h2, h3, h4, h5,
     .hero-wrap .slider-text .bread {
       font-weight: 800;
       color: #fff;
-      font-size: 30px;
-      font-family: "Poppins", Arial, sans-serif;
+      font-size: 50px;
+      font-family: "Merriweather", Arial, sans-serif;
       letter-spacing: 3px;
       text-transform: uppercase; }
     .hero-wrap .slider-text .btn-primary {
@@ -8404,7 +8404,7 @@ h1, h2, h3, h4, h5,
           color: #fff;
           line-height: 1.3;
           font-weight: 400;
-          font-family: "Amatic SC", cursive; }
+          font-family: "Roboto Condensed", cursive; }
           @media (max-width: 767.98px) {
             .owl-carousel.home-slider .slider-item .slider-text h1 {
               font-size: 40px; } }
@@ -8747,7 +8747,7 @@ h1, h2, h3, h4, h5,
       font-weight: 300;
       text-transform: uppercase;
       letter-spacing: 1px;
-      font-family: "Poppins", Arial, sans-serif; }
+      font-family: "Merriweather", Arial, sans-serif; }
       .product .text h3 a {
         color: #334443; }
     .product .text p.price {
@@ -9293,7 +9293,7 @@ textarea.form-control {
     font-size: 40px;
     font-weight: 600;
     color: #334443;
-    font-family: "Poppins", Arial, sans-serif; }
+    font-family: "Merriweather", Arial, sans-serif; }
     @media (max-width: 767.98px) {
       .heading-section h2 {
         font-size: 28px; } }
@@ -9364,7 +9364,7 @@ textarea.form-control {
       font-size: 15px;
       text-transform: uppercase;
       font-weight: 500;
-      font-family: "Poppins", Arial, sans-serif;
+      font-family: "Merriweather", Arial, sans-serif;
       color: #334443; }
     .ftco-services .services .media-body span {
       text-transform: uppercase;
@@ -9384,7 +9384,7 @@ textarea.form-control {
     background: #02be6e; }
     .ftco-category .category-wrap .text h2 {
       font-size: 18px;
-      font-family: "Poppins", Arial, sans-serif; }
+      font-family: "Merriweather", Arial, sans-serif; }
       .ftco-category .category-wrap .text h2 a {
         color: #fff; }
 
