--- a/DiChoHo/templates/about.html
+++ b/DiChoHo/templates/about.html
@@ -62,7 +62,12 @@
                 </span>
               </div>
               <div class="text text-center">
-                <p class="mb-5 pl-4 line">Sản phẩm chất lượng rất tốt, giao hàng lại đúng hạn, tôi rất hài lòng</p>
+                <p class="mb-5 pl-4 line"
+                style="overflow: hidden;
+                text-overflow: ellipsis;
+                display: -webkit-box;
+                -webkit-line-clamp: 2;
+                -webkit-box-orient: vertical;">Sản phẩm chất lượng rất tốt, giao hàng lại đúng hạn, tôi rất hài lòng</p>
                 <p class="name">Garreth Smith</p>
                 <span class="position">Marketing Manager</span>
               </div>
@@ -76,7 +81,12 @@
                 </span>
               </div>
               <div class="text text-center">
-                <p class="mb-5 pl-4 line">Cửa hàng luôn có những chương trình giảm giá, đồng thời lại miễn phí giao hàng. Cho cửa hàng 5 sao luôn.</p>
+                <p class="mb-5 pl-4 line"
+                style="overflow: hidden;
+                text-overflow: ellipsis;
+                display: -webkit-box;
+                -webkit-line-clamp: 2;
+                -webkit-box-orient: vertical;">Cửa hàng luôn có những chương trình giảm giá, đồng thời lại miễn phí giao hàng. Cho cửa hàng 5 sao luôn.</p>
                 <p class="name">Garreth Smith</p>
                 <span class="position">Interface Designer</span>
               </div>
@@ -90,7 +100,12 @@
                 </span>
               </div>
               <div class="text text-center">
-                <p class="mb-5 pl-4 line">Trong thời buổi dịch bệnh như thế này, việc kiếm được một nguồn nông sản tốt không phải là chuyện dễ dàng, tuy nhiên DICHOHO đã không làm tôi thất vọng.</p>
+                <p class="mb-5 pl-4 line"
+                style="overflow: hidden;
+                text-overflow: ellipsis;
+                display: -webkit-box;
+                -webkit-line-clamp: 2;
+                -webkit-box-orient: vertical;">Trong thời buổi dịch bệnh như thế này, việc kiếm được một nguồn nông sản tốt không phải là chuyện dễ dàng, tuy nhiên DICHOHO đã không làm tôi thất vọng.</p>
                 <p class="name">Garreth Smith</p>
                 <span class="position">UI Designer</span>
               </div>
@@ -104,7 +119,12 @@
                 </span>
               </div>
               <div class="text text-center">
-                <p class="mb-5 pl-4 line">Không nói nhiều, cho cửa hàng 5 sao.</p>
+                <p class="mb-5 pl-4 line"
+                style="overflow: hidden;
+                text-overflow: ellipsis;
+                display: -webkit-box;
+                -webkit-line-clamp: 2;
+                -webkit-box-orient: vertical;">Giao hàng luôn luôn đúng hạn. Không nói nhiều, cho cửa hàng 5 sao.</p>
                 <p class="name">Garreth Smith</p>
                 <span class="position">Web Developer</span>
               </div>
@@ -118,7 +138,12 @@
                 </span>
               </div>
               <div class="text text-center">
-                <p class="mb-5 pl-4 line">Giao hàng luôn luôn đúng hạn, nhân viên thì nhiệt tình. Cửa hàng này rất tốt.</p>
+                <p class="mb-5 pl-4 line"
+                style="overflow: hidden;
+                text-overflow: ellipsis;
+                display: -webkit-box;
+                -webkit-line-clamp: 2;
+                -webkit-box-orient: vertical;">Giao hàng luôn luôn đúng hạn, nhân viên thì nhiệt tình. Cửa hàng này rất tốt.</p>
                 <p class="name">Garreth Smith</p>
                 <span class="position">System Analyst</span>
               </div>
