--- a/DiChoHo/templates/static/css/register_style.css
+++ b/DiChoHo/templates/static/css/register_style.css
@@ -1,5 +1,5 @@
 * {
-  font-family: -apple-system, BlinkMacSystemFont, "San Francisco", Helvetica,
+  font-family: "Merriweather", BlinkMacSystemFont, "San Francisco", Helvetica,
     Arial, sans-serif;
   font-weight: 300;
   margin: 0;
