--- a/DiChoHo/templates/login.html
+++ b/DiChoHo/templates/login.html
@@ -7,7 +7,7 @@
 {% block content %}
 
 <section class="body-login">
-  <div class="session" style="width: 600px;">
+  <div class="session" >
     <div class="left">
       <?xml version="1.0" encoding="UTF-8"?>
       <svg
