--- a/DiChoHo/templates/static/css/register_style.css
+++ b/DiChoHo/templates/static/css/register_style.css
@@ -19,7 +19,7 @@ h2{
 
 html,
 .body-register {
-  height: 100vh;
+  height: 160vh;
   width: 100vw;
   margin: 0 0;
   display: flex;
@@ -50,7 +50,7 @@ form {
   align-items: flex-start;
   justify-content: center;
   padding-bottom: 20px;
-  width: 450px;
+  width: 100%;
 }
 form h4 {
   margin-bottom: 20px;
@@ -291,6 +291,14 @@ input:focus {
   width: auto;
   margin: 20px;
 }
+
+@media only screen and (max-width: 768px) {
+  /* For mobile phones: */
+  .left {
+    width: 0%;
+  }
+}
+
 
 .msg {
   color: red;
